--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,19 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.4", features = ["derive"] }
-frame-metadata = { version = "16.0.0", features = ["legacy"] }
+frame-metadata = { version = "20.0.0", features = ["legacy"] }
 hex = "0.4.3"
 parity-scale-codec = "3.6.12"
 rand = "0.8.5"
 scale-info = "2.11.3"
-scale-info-legacy = "0.2.1"
+scale-info-legacy = "0.2.2"
 scale-type-resolver = "0.2.0"
-scale-value = "0.16.3"
+scale-value = "0.18.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.117"
 serde_yaml = "0.9.34"
 sp-crypto-hashing = "0.1.0"
-subxt = "0.37.0"
+subxt = "0.41.0"
+subxt-rpcs = "0.41.0"
 tokio = { version = "1.38.0", features = ["full"] }
-frame-decode = { version = "0.3.0" }
+frame-decode = { version = "0.7.0" }
